src/test/deca/context/valid/created/test_conv.deca
// test_conv.deca
{
    int i = 1;
    float f = 1.5;
    if (i < f) { print("Ok"); }    
    if (f > 2) { print("Ok"); }    
}