src/test/deca/context/invalid/created/test_invalid_arith.deca

// test_invalid_arith.deca
{
	// Déclarations
	int x;
	float y;
	boolean b;

	// Affectations invalides
	x = true;     
	y = readInt(); 
	b = x;         
	// Opérations invalides
	x = x + true;  
	y = y + b;     
	b = true && x; 
}
